--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -1,7 +1,7 @@
 .hero-unit
   .content
     .text-center
-      %h1 CodeNami
+      %h1 Dashbozu
       = form_tag user_omniauth_authorize_path(:github), :method => 'post' do |f|
         %button.btn.btn-primary.btn-large
           %i.icon-signin
