--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -1,19 +1,23 @@
-%h1 Listing projects
-%table
-  %thead
-    %tr
-      %th Name
-      %th Created by
-      %th
-      %th
-      %th
-  %tbody
-    - @projects.each do |project|
-      %tr
-        %td= project.name
-        %td= project.created_by
-        %td= link_to 'Show', project
-        %td= link_to 'Edit', edit_project_path(project)
-        %td= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' }
-%br/
-= link_to 'New Project', new_project_path
+.nav-bar
+  .row-fluid
+    %h3{style: 'display:inline'}  Listing projects
+    .pull-right
+      = link_to 'New Project', new_project_path, {:class => 'btn'}
+.row-fluid
+  .span12
+    %table.table.table-striped
+      %thead
+        %tr
+          %th Name
+          %th Created by
+          %th
+          %th
+          %th
+      %tbody
+        - @projects.each do |project|
+          %tr
+            %td= project.name
+            %td= project.created_by
+            %td= link_to 'Show', project
+            %td= link_to 'Edit', edit_project_path(project)
+            %td= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' }
