--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -1,9 +1,11 @@
-.hero-unit
-  .content
-    .text-center
-      %h1 Dashbozu
-      = form_tag user_omniauth_authorize_path(:github), :method => 'post' do |f|
-        %button.btn.btn-primary.btn-large
-          %i.icon-signin
-          = "#{t(:button_sign_in)} with GitHub"
+.row-fluid
+  .span12
+    .hero-unit
+      .content
+        .text-center
+          %h1 Dashbozu
+          = form_tag user_omniauth_authorize_path(:github), :method => 'post' do |f|
+            %button.btn.btn-primary.btn-large
+              %i.icon-signin
+              = "#{t(:button_sign_in)} with GitHub"
 
