--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -22,7 +22,7 @@
             %span.icon-bar
             %span.icon-bar
             %span.icon-bar
-          %a.brand(href=root_path) Dashbozu
+          %a.brand(href=root_path)=image_tag "white_logo.png"
           .container.nav-collapse
             %ul.nav
               %li= link_to "Link 1", "/path1"
