Removed: created_by, Added: api_key

--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -3,8 +3,8 @@
   %strong Name:
   = @project.name
 %p
-  %strong Created by:
-  = @project.created_by
+  %strong Api key:
+  = @project.api_key
 = link_to 'Edit', edit_project_path(@project)
 |
 \#{link_to 'Back', projects_path}
