--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -9,7 +9,7 @@
       %thead
         %tr
           %th Name
-          %th Created by
+          %th API key
           %th
           %th
           %th
@@ -17,7 +17,7 @@
         - @projects.each do |project|
           %tr
             %td= project.name
-            %td= project.created_by
+            %td= project.api_key
             %td= link_to 'Show', project
             %td= link_to 'Edit', edit_project_path(project)
             %td= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' }
