--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -36,6 +36,7 @@
                     = t(:button_account)
                     %i.icon-caret-down
                   %ul.dropdown-menu.account-menu
+                    %li= link_to t(:button_profile), profile_show_path, class: 'icon-user'
                     %li= link_to t(:button_sign_out), destroy_user_session_path, method: :delete, class: 'icon-signout'
 
     .container-fluid
