Added: switch to create project

--- a/app/views/projects/from_service.html.haml
+++ b/app/views/projects/from_service.html.haml
@@ -17,4 +17,4 @@
         %tr
           %td= project.name
           %td.make-switch.project-toggle
-            =check_box_tag '','', project.users.exists?(current_user), 'class' => 'project-toggle', 'dashbozu-url' => toggle_project_path(params[:provider], name: project.name)
+            =check_box_tag '','', @associated_projects.find {|ap| ap.provider == project.provider and ap.name == project.name }, 'class' => 'project-toggle', 'dashbozu-url' => toggle_project_path(params[:provider], name: project.name)
