--- a/app/views/projects/from_service.html.haml
+++ b/app/views/projects/from_service.html.haml
@@ -16,5 +16,6 @@
       - @projects.each do |project|
         %tr
           %td= project.name
-          %td.make-switch.project-toggle
-            =check_box_tag '','', @associated_projects.find {|ap| ap.provider == project.provider and ap.name == project.name }, 'class' => 'project-toggle', 'dashbozu-url' => toggle_project_path(params[:provider], name: project.name)
+          %td{style: 'width:118px'}
+            .make-switch.project-toggle
+              =check_box_tag '','', @associated_projects.find {|ap| ap.provider == project.provider and ap.name == project.name }, 'class' => 'project-toggle', 'dashbozu-url' => toggle_project_path(params[:provider], name: project.name)
