--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -31,9 +31,10 @@
                     %li= link_to t(:button_sign_out), destroy_user_session_path, method: :delete, class: 'icon-signout'
 
     .container-fluid
-      = bootstrap_flash
+      .container-fluid
+        = bootstrap_flash
 
-      = yield
+        = yield
 
       %footer
         %p Copyright (C) 2011-2013 <a href='http://www.codefirst.org'>codefirst.org</a>. All rights reserved.
