--- a/app/views/projects/from_service.html.haml
+++ b/app/views/projects/from_service.html.haml
@@ -7,6 +7,7 @@
 .row
   .span2
     %ul.nav.nav-list
+      %li= link_to 'Enabled', projects_path
       %li.nav-header Accounts
       - @owners.each do |owner|
         %li{class: (params[:owner] == owner ? 'active' : '')}= link_to owner, projects_from_service_path(params[:provider], owner: owner)
