Show activities by projects

--- a/app/views/activities/index.html.haml
+++ b/app/views/activities/index.html.haml
@@ -14,7 +14,7 @@
     %th
     %th
 
-  - @activities.each do |activity|
+  - @project.activities.each do |activity|
     %tr
       %td= activity.title
       %td= activity.body
