--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -11,11 +11,13 @@
           %th
           %th
           %th
+          %th
       %tbody
         - @projects.each do |project|
           %tr
             %td= project.name
             %td= project.api_key
+            %td= link_to 'Activities', project_activities_path(project.api_key)
             %td= link_to 'Show', project
             %td= link_to 'Edit', edit_project_path(project)
             %td= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' }
