--- a/app/views/profile/show.html.haml
+++ b/app/views/profile/show.html.haml
@@ -2,7 +2,8 @@
 
 %ul.nav.nav-tabs
   %li.active= link_to t(:button_profile), profile_show_path
-  %li= link_to t(:button_repositories), projects_from_service_path('github')
+  - current_user.auths.each do |auth|
+    %li= link_to auth.provider, projects_from_service_path(auth.provider)
 
 %dl.dl-horizontal
 
