--- a/app/views/profile/show.html.haml
+++ b/app/views/profile/show.html.haml
@@ -20,7 +20,7 @@
 
 - Settings.omniauth.keys.each do |provider|
   - unless current_user.auths.any? {|auth| auth.provider == provider}
-    = form_tag user_omniauth_authorize_path(provider), :method => 'post' do |f|
+    = form_tag user_omniauth_authorize_path(provider: provider, connect: true), :method => 'post' do |f|
       %button.btn.btn-primary.btn-large
         %i.icon-user
         = "#{t(:button_connect)} with #{provider}"
