--- a/app/views/profile/show.html.haml
+++ b/app/views/profile/show.html.haml
@@ -3,7 +3,7 @@
 %ul.nav.nav-tabs
   %li.active= link_to t(:button_profile), profile_show_path
   - current_user.auths.each do |auth|
-    %li= link_to auth.provider, projects_from_service_path(auth.provider)
+    %li= link_to Auth.name_of(auth.provider), projects_from_service_path(auth.provider)
 
 %dl.dl-horizontal
 
@@ -23,4 +23,4 @@
     = form_tag user_omniauth_authorize_path(provider: provider, connect: true), :method => 'post' do |f|
       %button.btn.btn-primary.btn-large
         %i.icon-user
-        = "#{t(:button_connect)} with #{provider}"
+        = "#{t(:button_connect)} with #{Auth.name_of(provider)}"
