--- a/app/views/projects/from_service.html.haml
+++ b/app/views/projects/from_service.html.haml
@@ -4,7 +4,7 @@
   %li= link_to t(:button_profile), profile_show_path
   - current_user.auths.each do |auth|
     %li{class: "#{params[:provider] == auth.provider ? 'active' : ''}"}
-      = link_to auth.provider, projects_from_service_path(auth.provider)
+      = link_to Auth.name_of(auth.provider), projects_from_service_path(auth.provider)
 
 .row
   .span2
