--- a/app/views/activities/index.html.haml
+++ b/app/views/activities/index.html.haml
@@ -1,33 +1,4 @@
-%h1 Listing activities
+%h3 Listing activities
+.activity-list
+  = render partial: 'activity', collection: @project.activities
 
-%table
-  %tr
-    %th Title
-    %th Body
-    %th Source
-    %th Project
-    %th Url
-    %th Icon url
-    %th Status
-    %th Author
-    %th
-    %th
-    %th
-
-  - @project.activities.each do |activity|
-    %tr
-      %td= activity.title
-      %td= activity.body
-      %td= activity.source
-      %td= activity.project_id
-      %td= activity.url
-      %td= activity.icon_url
-      %td= activity.status
-      %td= activity.author
-      %td= link_to 'Show', activity
-      %td= link_to 'Edit', edit_activity_path(activity)
-      %td= link_to 'Destroy', activity, :method => :delete, :data => { :confirm => 'Are you sure?' }
-
-%br
-
-= link_to 'New Activity', new_activity_path
