Fixed: icon size

--- a/app/views/activities/_activity.html.haml
+++ b/app/views/activities/_activity.html.haml
@@ -5,6 +5,10 @@
     padding-left: 80px;
     background-size: 70px auto;
   }
+  .activity-title img {
+    width: 16px;
+    height: 16px;
+  }
   .activity-author{
     color: #7e7e7e;
   }
