--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -2,6 +2,8 @@
   .row-fluid
     %h3{style: 'display:inline'}  Listing projects
 .row-fluid
+  .pull-right= link_to 'Show all activities', all_activities_path
+.row-fluid
   .span12
     %table.table.table-striped
       %thead
