--- a/app/views/activities/index.html.haml
+++ b/app/views/activities/index.html.haml
@@ -1,4 +1,4 @@
 %h3 Listing activities
 .activity-list
-  = render partial: 'activity', collection: @project.activities
+  = render partial: 'activity', collection: @activities
 
