--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -1,30 +1,1 @@
-%p#notice= notice
-
-%p
-  %b Title:
-  = @activity.title
-%p
-  %b Body:
-  = @activity.body
-%p
-  %b Source:
-  = @activity.source
-%p
-  %b Project:
-  = @activity.project_id
-%p
-  %b Url:
-  = @activity.url
-%p
-  %b Icon url:
-  = @activity.icon_url
-%p
-  %b Status:
-  = @activity.status
-%p
-  %b Author:
-  = @activity.author
-
-= link_to 'Edit', edit_activity_path(@activity)
-\|
-= link_to 'Back', activities_path
+= render partial: 'activity', collection: [@activity]
