--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -1,1 +1,9 @@
 = render partial: 'activity', collection: [@activity]
+
+= content_for :opengraph do
+  %meta{property: "og:type",        content: 'article'}
+  %meta{property: "og:url",         content: activity_url(@activity.encrypted_identifier)}
+  %meta{property: "og:title",       content: @activity.title}
+  %meta{property: "og:description", content: @activity.body}
+  %meta{property: "og:image",       content: activity_source_image_url(@activity)}
+
