Removed: unused codes

--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -2,7 +2,7 @@
   .row-fluid
     %h3{style: 'display:inline'}  Listing projects
 .row-fluid
-  .pull-right= link_to 'Show all activities', all_activities_path
+  .pull-right= link_to 'Show all activities', activities_path
 .row-fluid
   .span12
     %table.table.table-striped
