--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -9,17 +9,11 @@
       %thead
         %tr
           %th Name
+          %th Provider
           %th API key
-          %th
-          %th
-          %th
-          %th
       %tbody
         - @projects.each do |project|
           %tr
-            %td= project.name
+            %td= link_to project.name, project_activities_path(project.api_key)
+            %td= project.provider
             %td= project.api_key
-            %td= link_to 'Activities', project_activities_path(project.api_key)
-            %td= link_to 'Show', project
-            %td= link_to 'Edit', edit_project_path(project)
-            %td= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' }
