Added: responsive top page

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -45,4 +45,6 @@
         = yield
 
       %footer
-        %p Copyright (C) 2011-2014 <a href='http://www.codefirst.org'>codefirst.org</a>. All rights reserved.
+        %p
+          Copyright (C) 2011-2014 <a href='http://www.codefirst.org'>codefirst.org</a>.
+          %span.hidden-phone All rights reserved.
