--- a/app/views/activities/_activity.html.haml
+++ b/app/views/activities/_activity.html.haml
@@ -34,5 +34,5 @@
     .activity-body
       = activity.body
     .activity-created
-      = link_to strftime(activity.created_at), activity_url(id: activity.encrypted_identifier)
+      = link_to strftime(activity.created_at), activity_url(activity)
 
