Fixed: emebed HTMLs were broken in AsakusaSatellite

--- a/app/views/activities/_activity.html.haml
+++ b/app/views/activities/_activity.html.haml
@@ -1,8 +1,8 @@
 :css
-  .activity {
+  div.activity {
     padding: 8px;
   }
-  .activity-right {
+  div.activity-right {
     background-repeat: no-repeat;
     padding-left: 80px;
     background-size: 70px auto;
