--- a/app/views/activities/embed.html.haml
+++ b/app/views/activities/embed.html.haml
@@ -1,2 +1,2 @@
-= render partial: 'activity', collection: [@activity]
+= render partial: 'activity', collection: [@activity], locals: {target: '_blank'}
 
