--- a/app/views/profile/hooks.html.haml
+++ b/app/views/profile/hooks.html.haml
@@ -1,6 +1,6 @@
 .nav-bar
   .row-fluid
-    %h3{style: 'display:inline'} Hooks
+    %h3{style: 'display:inline'} User Hooks
 .row-fluid
   .pull-right= link_to 'Back to profile', profile_show_path
 = render partial: 'projects/hooks'
