--- a/app/views/projects/hooks.html.haml
+++ b/app/views/projects/hooks.html.haml
@@ -1,6 +1,6 @@
 .nav-bar
   .row-fluid
-    %h3{style: 'display:inline'} Hooks
+    %h3{style: 'display:inline'} Project Hooks
 .row-fluid
   .pull-right= link_to 'Back to project', project_activities_path(@project.api_key)
 = render partial: 'hooks'
