--- a/app/views/profile/hooks.html.haml
+++ b/app/views/profile/hooks.html.haml
@@ -3,4 +3,4 @@
     %h3{style: 'display:inline'} User Hooks
 .row-fluid
   .pull-right= link_to 'Back to profile', profile_show_path
-= render partial: 'projects/hooks'
+= render partial: 'projects/hooks', locals: {project: @project, plugins: @plugins }
