--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -1,3 +1,7 @@
+- content_for :title do
+  Listing projects
+
+%h3 Profile
 .nav-bar
   .row-fluid
     %h3{style: 'display:inline'}  Listing projects
