A happy new year 2016

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -47,5 +47,5 @@
 
       %footer
         %p
-          Copyright (C) 2011-2015 <a href='http://www.codefirst.org'>codefirst.org</a>.
+          Copyright (C) 2011-2016 <a href='https://www.codefirst.org'>codefirst.org</a>.
           %span.hidden-phone All rights reserved.
